--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
+    "react-country-flag": "^3.0.2",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
